--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 <head>
-    <title>‚Ä[‚·‚Æ</title>
+    <title>aaaaaa</title>
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>ƒ[ƒ‚©‚çGit‚ğ•×‹­‚µ‚æ‚¤I</h1>
-    <p>‚Ü‚¸‚Í“à—e‚ğ•ÏX‚µ‚Ä‚İ‚é</p>
+    <h1>mojibakesuru</h1>
+    <p>rikaifunou</p>
 </body>
 </html>
