「今食べたいもの」2文追加

--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,7 @@
     <h1>mojibakesuru</h1>
     <p>rikaifunou</p>
     <p><b>ごはんおいしい</b></p>
+    <h2>今食べたいもの</h2>
+    <p>ラーメン</p>
 </body>
 </html>
